--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
         <module>extensions-contrib/parquet-extensions</module>
         <module>extensions-contrib/statsd-emitter</module>
         <module>extensions-contrib/orc-extensions</module>
+        <module>extensions-contrib/google-extensions</module>
     </modules>
 
     <dependencyManagement>
@@ -641,7 +642,11 @@
                 <exclusions>
                     <exclusion>
                         <groupId>com.google.http-client</groupId>
-                        <artifactId>google-http-client</artifactId>
+                        <artifactId>google-http-client-jackson2</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>org.apache.httpcomponents</groupId>
